--- a/styles/main.css
+++ b/styles/main.css
@@ -1,185 +1,188 @@
 /* Variables de color y tipografía */
 :root {
 	--color-bg-light: #F3F5FC;
+	--color-bg-dark: #183153;
 	--color-text-light: #0A3871;
+	--color-text-dark: #FFF;
 	--color-button-background: #0A3871;
 	--color-button-text: #FFFFFF;
-	--color-button-border: #E6E6E6;
+	--color-button-dark-background: #112240;
+	--color-button-dark-text: #64ffda;
 	--color-output-background: #FFFFFF;
-	--color-bg-dark: #1A1A1A;
-	--color-text-dark: #F3F5FC;
-	--font-family: 'Inter', sans-serif;
-	--font-family-dark: 'Inter', sans-serif;
 }
 
 body {
 	background-color: var(--color-bg-light);
 	color: var(--color-text-light);
-	font-family: var(--font-family);
+	font-family: 'Inter', sans-serif;
 	margin: 0;
 	padding: 0;
 	transition: background-color 0.5s ease, color 0.5s ease, font-family 0.5s ease;
 }
 
-body.dark-theme {
+/* Dark mode */
+body.dark {
 	background-color: var(--color-bg-dark);
 	color: var(--color-text-dark);
-	font-family: var(--font-family-dark);
 }
 
+/* Header */
 .head-bar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 40px;
-	background-color: var(--color-output-background);
-	border-bottom: 1px solid var(--color-button-border);
 }
 
-.container {
-	display: flex;
-	justify-content: space-between;
-	padding: 40px;
+#logo-img {
+	width: 120px;
+	height: 48px;
+	margin: 20px 0 10px 0;
 }
 
-h1 {
-	font-size: 32px;
-	font-weight: 400;
-	margin-bottom: 20px;
-}
-
-textarea {
-	width: 100%;
-	height: 150px;
-	margin-bottom: 20px;
-	padding: 15px;
-	border-radius: 8px;
-	border: 2px solid #E6E6E6;
-	font-size: 18px;
-	font-family: var(--font-family);
-	resize: none;
-	background-color: var(--color-output-background);
-	color: inherit;
-	transition: background-color 0.5s ease, color 0.5s ease;
-}
-
-.buttons {
-	display: flex;
-	gap: 10px;
-}
-
-button {
-	padding: 15px 25px;
-	border-radius: 8px;
-	border: 2px solid var(--color-button-border);
-	background-color: var(--color-button-background);
-	color: var(--color-button-text);
-	font-size: 16px;
-	cursor: pointer;
-	transition: background-color 0.3s ease;
-}
-
-button#decryptBtn {
-	background-color: transparent;
-	color: var(--color-text-light);
-}
-
-button#decryptBtn:hover {
-	background-color: var(--color-button-border);
-}
-
-button#copyBtn {
-	display: none;
-	background-color: #28a745;
-}
-
-button:hover {
-	background-color: #003f7f;
-}
-
-#outputArea {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 200px;
-	background-color: var(--color-output-background);
-	border-radius: 8px;
-	border: 2px solid #E6E6E6;
-	padding: 15px;
-	margin-bottom: 20px;
-	color: inherit;
-	transition: background-color 0.5s ease, color 0.5s ease;
-}
-
-#outputText {
-	font-size: 18px;
-	text-align: center;
-	color: inherit;
-}
-
-footer {
-	text-align: center;
-	padding: 20px;
-	background-color: var(--color-button-background);
-	color: white;
-	font-family: var(--font-family);
-	margin-top: 20px;
-	font-size: 14px;
-}
 
 .toggle-container {
 	display: flex;
 	align-items: center;
-	gap: 10px;
+	margin: 20px 0 10px 0;
 }
 
-.switch {
-	position: relative;
-	display: inline-block;
-	width: 60px;
-	height: 34px;
-}
-
-.switch input {
+.checkbox {
 	opacity: 0;
-	width: 0;
-	height: 0;
+	position: absolute;
 }
 
-.slider {
-	position: absolute;
+.checkbox-label {
+	background-color: #fff;
+	width: 40px;
+	height: 16px;
+	border-radius: 50px;
+	position: relative;
+	padding: 5px;
 	cursor: pointer;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	transition: 0.4s;
-	border-radius: 34px;
-	background-image: url('/assets/icons/sun.png');
-	background-size: 20px 20px;
-	background-repeat: no-repeat;
-	background-position: center;
-	transition: background-color 0.4s, background-image 0.4s;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.slider:before {
+.fa-moon {
+	color: var(--color-text-light);
+	cursor: pointer;
+}
+
+.fa-sun {
+	color: var(--color-text-light);
+	cursor: pointer;
+}
+
+.checkbox-label .ball {
+	background-color: var(--color-text-light);
+	width: 22px;
+	height: 22px;
 	position: absolute;
-	content: "";
-	height: 26px;
-	width: 26px;
-	left: 4px;
-	bottom: 4px;
-	background-color: white;
-	transition: 0.4s;
+	left: 2px;
+	top: 2px;
 	border-radius: 50%;
+	transition: transform 0.2s linear;
 }
 
-input:checked+.slider {
-	background-image: url('/assets/icons/moon.png');
+.checkbox:checked+.checkbox-label .ball {
+	transform: translateX(24px);
 }
 
-input:checked+.slider:before {
-	transform: translateX(26px);
+/* Main */
+
+textarea {
+	background-color: var(--color-output-background);
+	color: var(--color-button-background);
+	border: 1px solid var(--color-button-background);
+}
+
+body.dark textarea {
+	background-color: var(--color-bg-dark);
+	color: var(--color-text-dark);
+	border: 1px solid var(--color-text-dark);
+}
+
+button {
+	background-color: var(--color-button-background);
+	color: var(--color-button-text);
+	border: none;
+	padding: 10px 20px;
+	cursor: pointer;
+	transition: background-color 0.4s ease;
+	margin: 5px;
+}
+
+body.dark button {
+	background-color: var(--color-text-dark);
+	color: var(--color-bg-dark);
+	border: 2px solid var(--color-button-dark-text);
+}
+
+#copyBtn, #clearBtn {
+	margin-top: 10px;
+}
+
+/* Estilos comunes para todos los botones */
+.button-common {
+	background-color: #0A3871;
+	color: #FFFFFF;
+	border: none;
+	padding: 10px 20px;
+	cursor: pointer;
+	transition: background-color 0.4s ease, color 0.4s ease;
+}
+
+body.dark .button-common {
+	background-color: #FFFFFF;
+	color: #0A3871;
+	border: 2px solid #64ffda;
+}
+
+
+p {
+	color: var(--color-button-background);
+}
+
+body.dark p {
+	color: var(--color-text-dark);
+}
+
+.validation-msg {
+	font-size: 12px;
+	margin-top: 5px;
+	text-align: center;
+}
+
+/* Modal */
+#copyModal {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 20px;
+	background-color: #333;
+	color: #fff;
+	font-size: 18px;
+	text-align: center;
+	border-radius: 8px;
+	z-index: 1001;
+	/* Asegura que el modal esté por encima del contenido */
+	display: none;
+	/* Oculto por defecto */
+	opacity: 0;
+	transition: opacity 0.3s ease;
+}
+
+body.blur {
+	filter: blur(5px);
+	/* Aplica desenfoque al contenido de fondo */
+}
+
+body.modal-active {
+	overflow: hidden;
+	/* Evita el scroll cuando el modal está activo */
 }
 
 @media (max-width: 768px) {
