--- a/styles/main.css
+++ b/styles/main.css
@@ -92,6 +92,54 @@ body.dark {
 
 /* Main */
 
+.input-container {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	/* padding: 20px 40px; */
+}
+
+.history {
+	width: 20%;
+	background-color: var(--color-bg-light);
+	padding: 10px;
+	border-right: 1px solid var(--color-button-background);
+}
+
+body.dark .history {
+	background-color: var(--color-bg-dark);
+	color: var(--color-text-dark);
+}
+
+.history h2 {
+	margin-top: 0;
+}
+
+#historyList {
+	list-style: none;
+	padding-left: 0;
+}
+
+#historyList li {
+	margin-bottom: 10px;
+	font-size: 14px;
+	color: var(--color-button-background);
+}
+
+body.dark #historyList li {
+	color: var(--color-text-dark);
+}
+
+.input-container {
+	width: 60%;
+	padding: 20px;
+}
+
+.output {
+	width: 20%;
+	padding: 10px;
+}
+
 textarea {
 	background-color: var(--color-output-background);
 	color: var(--color-button-background);
@@ -186,7 +234,7 @@ body.modal-active {
 }
 
 @media (max-width: 768px) {
-	.container {
+	.input-container {
 		flex-direction: column;
 		align-items: center;
 	}
